--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 
 		
-		<button class=" w-50 btn btn-lg btn-secondary" type="submit" formaction="Booker_Profile.html">Sign in</button>
+		<button class=" w-50 btn btn-lg btn-secondary" type="submit" formaction="/Booker_Profile.html">Sign in</button>
 		
 
 		<!--<p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p> -->
